# Artic-Jump

./: README.md  playerwithgravity.cpp
Concept/: diagram
Concept/Presentation Concept/: SFML project.pptx
Final Souce Code/: README.me
Final Souce Code/Artic_Jump/: CMakeLists.txt  Fireball.cpp  Fireball.hpp  Gold.cpp  Gold.hpp  Heart.cpp  Heart.hpp  Immovable.cpp  Immovable.hpp  Pickable.cpp  Pickable.hpp  Player.cpp  Player.hpp  Sprites.cpp  Sprites.hpp  main.cpp  utilities.cpp  utilities.hpp
Source/: Sprites.cpp  main.cpp  playerwithgrav.cpp
